[project]
name = "autodealrerparser"
version = "0.1.0"
description = "AutoDealer online parser for services/works catalog"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.40.0",
    "loguru>=0.7.0",
    "fake-useragent>=1.4.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "schedule>=1.2.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]
